<resources>
    <string name="app_name">Cadastro</string>
    <string name="txtCompleteName">Nome completo</string>
    <string name="complete_name">Nome Completo</string>
    <string name="txtPhoneNumber">Telefone</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtTermEmail">Ingressar na lista de e-mails?</string>
    <string name="masculine">Masculino</string>
    <string name="feminine">Feminino</string>
    <string name="txtSex">Sexo</string>
    <string name="txtCity">Cidade</string>
    <string name="txtState">UF</string>
    <string name="txtClean">Limpar</string>
    <string name="txtSave">Salvar</string>
    <string-array name="arrState">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goías</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraíma</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
</resources>